--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <script>
     // === Customize these ===
-    const PERSON_NAME = "Babe"; // e.g., "Abbey"
+    const PERSON_NAME = "Habibi"; 
     const YOUR_NAME = "Fahim";
 
     // Apply custom text
