--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     </div>
 
     <div class="result" id="result"></div>
-    <div class="hint">Tip: try to click “No” 😅</div>
+    <div class="hint">go ahead… try “No” 😭</div>
   </div>
 
   <script>
     // === Customize these ===
-    const PERSON_NAME = "Habibi"; 
+    const PERSON_NAME = "Habibi";
     const YOUR_NAME = "Fahim";
 
     // Apply custom text
@@ -218,7 +218,7 @@
     }
 
     yesBtn.addEventListener("click", () => {
-      result.textContent = `YAY!!! 💞 See you soon — love, ${YOUR_NAME}`;
+      result.textContent = `See you soon 😘`;
       yesBtn.disabled = true;
       noBtn.disabled = true;
       spawnHearts(24);
