--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <div class="result" id="result"></div>
-    <div class="hint">go ahead… try “No” 😭</div>
+    <div class="hint">try “No” if you want</div>
   </div>
 
   <script>
