--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       noCounter++;
       if (noCounter === 3) noBtn.textContent = "Nope";
-      if (noCounter === 6) noBtn.textContent = "Stop 😭";
+      if (noCounter === 6) noBtn.textContent = "Stop";
       if (noCounter === 10) noBtn.textContent = "Nice try";
     }
 
